[package]
name = "rust-scanner-test"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.9.3"
git2 = "0.19.0"
openssl = "0.10.66"
pest = "2.7.11"
tempfile = "3.12.0"
tokio = "1.39.2"
vectorscan = "0.1.0"
winnow = "0.6.16"

[[example]]
name = "main"
path = "examples/main.rs"
test = false
bench = false

[lib]
name = "rst_lib"
test = true
bench = false
